[package]
name = "axum-temp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-login = "0.15.3"
env_logger = "0.11.3"
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tower-sessions = "0.12.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
